Update HistoryManagerTests.java